styles.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    color: white;
}

.icon{
    margin: lem;
    display: inline-block;
    align-items: center;
    vertical-align: center;
    margin-left: 25px;
    margin-right:8px;
}

.home{
    margin: lem;
    display: inline-block;
    align-items: center;
    vertical-align: center;
    margin-right:8px;
    line-height: 50px;
}

.iconText{
    font-size: 20px;
    font-style: normal;
    line-height: 50px;
}

.backgroundImage{
    background-repeat: no-repeat; 
    background-attachment: fixed;
    background-size: cover;
    background-position: center center;
    height: 100%;
    width: 100%;
}

.section {
    background-color: #2c3034;
    text-align: center;
    display: block;
    list-style-position: inside;
}

.section h2{
    font-size: 30pt;
    font-weight: bolder;
    margin-top: 50px;
}

.introText{
    font-size: 40pt;
    font-weight: bold;
    padding-top: 350px;
    padding-bottom: 350px;
}


.biography{
    align-items: center; 
    font-size: 25pt;
    text-wrap: wrap;
}


.biography p{
    padding-top: 100px;
    padding-bottom: 100px;
    padding-left: 200px;
}

.biography img{
    padding-top: 100px;
    padding-bottom: 100px;
    display: inline-block;
    width: 800px;
}

.schedule th, td{
    margin-left: 10px;
    margin-right: 10px;
    font-size: 20pt;
    text-align: center;
}

.flex-container {
    display: flex;
}

.flex-child{
    flex: 1;
    font-size: 25pt;
    margin: 80px;
    margin-top: 40px;
    border: 5px solid white; 
    border-radius: 25px;
}

.facts-section h1{
    font: 50pt;
    margin: 40px;
    text-decoration: underline;
}

.facts-section li{
    margin-bottom: 40px;
}

.facts-section p{
    margin-bottom: 40px;
    font-style: italic;
}

.facts-section a{
    color:lightblue;
}

